--- a/build.gradle
+++ b/build.gradle
@@ -1,23 +1,41 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '2.7.9'
-	id 'io.spring.dependency-management' version '1.1.0'
+	id 'eclipse'
+	id 'org.springframework.boot' version '2.7.1'
+	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
 }
 
-group = 'hello'
+group = 'likelionspring'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '11'
+
+java {
+	sourceCompatibility = '11'
+}
+
+configurations {
+	compileOnly {
+		extendsFrom annotationProcessor
+	}
+}
 
 repositories {
 	mavenCentral()
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-mustache'
+
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	testImplementation 'junit:junit:4.13.1'
+    compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	implementation 'org.mariadb.jdbc:mariadb-java-client'
+	implementation 'com.h2database:h2'
+
+	implementation 'org.springframework.boot:spring-boot-starter-mustache'
 }
 
-tasks.named('test') {
-	useJUnitPlatform()
-}
+
