--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 
+spring.jpa.show_sql=true
+
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:testdb
+server.servlet.encoding.force-response=true
